# MOAAP

./: .gitignore  2d_vs_3d.py  2d_vs_3d.py.lprof  3d.sh  3d_vs_2d.py  Kopie_von_MOAAP_idialized_cloud_test.ipynb  README.md  TODO.txt  Tracking_Functions.py  Tracking_Functions_old.py  analyze_chunking.py  benchmark_summary.txt  benchmark_summary_1.txt  genindex.html  index.html  lineprofiler_all.txt  lineprofiler_mcs_2.txt  memory.txt  modules.html  objects.inv  plot_bench.py  py-modindex.html  pyproject.toml  requirements.txt  results.txt  run_3d.py  search.html  searchindex.js  sweep_results.csv  top10_configs_1.csv  top10_configurations.csv  top10_configurations.txt  tutorial.html  watershedding-idealized-test.ipynb  which_watershed_notes.txt
.github/workflows/: docs-pages.yml  docs.yml
CREDITS.md/: NOTICE
_modules/: index.html
_modules/moaap/: main.html
_modules/moaap/trackers/: atmospheric_rivers.html  clouds.html  cyclones.html  fronts.html  jets.html  tropical_cyclones.html  waves.html
_modules/moaap/utils/: data_proc.html  (+4 more)
benchmarks/: lineprofiler_mcs.txt  profiler.txt  sweep_results_800x800.csv  sweep_results_default.csv  top5_configurations.txt
docs/source/: conf.py  index.rst
moaap/: __init__.py  config.py  main.py
moaap/.ipynb_checkpoints/: config-checkpoint.py  main-checkpoint.py
moaap/trackers/: __init__.py  atmospheric_rivers.py  clouds.py  cyclones.py  fronts.py  jets.py  sm.py  sst.py  tropical_cyclones.py  waves.py
moaap/utils/: __init__.py  constants.py  data_proc.py  grid.py  object_props.py  profiling.py  segmentation.py
(+32 files in other folders)
