[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moaap"
version = "0.1.0"
description = "Method for Object-based Analysis of Atmospheric Phenomena"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "netCDF4",
    "xarray",
    "pandas",
    "tqdm",
    "scikit-image",
    "cartopy",
    "shapely",
    "psutil"
]

[project.urls]
"Homepage" = "https://github.com/grafrap/Semester-thesis"